@@ -1,7 +1,11 @@
 from zope.interface import implements
 from zope.component import adapts
 from zope.component import getUtility
-from z3c.json import interfaces
+
+try:
+	import json
+except:
+	import simplejson as json
 
 from Products.TinyMCE.interfaces.utility import ITinyMCE
 from Products.TinyMCE.adapters.interfaces.JSONFolderListing import IJSONFolderListing
@@ -101,5 +105,4 @@ class JSONFolderListing(object):
                 results['upload_allowed'] = fti.isConstructionAllowed(object) 
         
         # return results in JSON format
-        jsonWriter = getUtility(interfaces.IJSONWriter)
-        return jsonWriter.write(results)
+        return json.dumps(results)
