@@ -22,6 +22,7 @@ For basic installation use the following section in your buildout::
 An upgrade step is also available through portal_setup if you are updating
 from an earlier version.
 
+
 buildout.cfg example using svn egg from the trunk
 -------------------------------------------------
 
